--- a/lycosa's-web/style-blog/style.css
+++ b/lycosa's-web/style-blog/style.css
@@ -4,7 +4,7 @@
 
 body {
   background-color: #436a7b;
-  background-image: url('../images/bg_diamond.png');
+  background-image: url('../images-blog/bg_diamond.png');
 	background-position: top;
 	 background-repeat: repeat;
   background-size: 300px 300px;
@@ -143,4 +143,5 @@ h1, h2, h3, h4, h5 {
 #footer {
   font-size: 0.8em;
   padding: 0 5% 10px 5%;
+
 }
