--- a/css.css
+++ b/css.css
@@ -3,7 +3,7 @@ body, html {
 }
 
 @font-face{
-src: url('data/font/vgados.ttf'); 
+src: url('data/font/vgadoss.ttf'); 
  font-family: 'vgados';
 }
 
