Refactor music player styles and update font family

--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
   /* blue musicplayer */
         
         #musicplayer{ 
-          font-family: 'basiic';
+          font-family: 'planb';
           font-weight:bold;
           height:30px;
           width:100%;
@@ -226,4 +226,5 @@ margin-top:15px;
   }
     
  
+
     
