--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
   /* blue musicplayer */
         
         #musicplayer{ 
-          font-family: 'planb';
+          font-family: 'basiic';
           font-weight:bold;
           height:30px;
           width:100%;
@@ -228,3 +228,4 @@ margin-top:15px;
  
 
     
+
