--- a/warez.css
+++ b/warez.css
@@ -18,3 +18,14 @@
    
     }
     
+.windows4downloads{
+
+ display:flex;
+  align-items:center;
+           float: center;
+        justify-content:center; 
+           align-self:center;
+           gap: 15px;
+
+
+}
