--- a/warez.css
+++ b/warez.css
@@ -27,6 +27,7 @@ text-align:center;
            align-self:center;
            gap: 15px;
  font-family: 'vgados';
+      font-size:20px;
 }
 
 @font-face{
