--- a/warez.css
+++ b/warez.css
@@ -27,7 +27,7 @@ text-align:center;
            align-self:center;
            gap: 15px;
  font-family: 'vgados';
-      font-size:20px;
+      font-size:1.2rem;
 }
 
 @font-face{
