--- a/warez.css
+++ b/warez.css
@@ -41,8 +41,9 @@
 margin-bottom:0px;
 left:50%;
       right:50%;
-
-      
+ font-family: 'vgados';
+            font-size:1.2rem;
+      text-align:center;
 }
 
 
