--- a/warez.css
+++ b/warez.css
@@ -49,15 +49,18 @@ left:50%;
 
 
 .windows4downloads{
-text-align:center;
- display:flex;
-  align-items:center;
-           float: center;
-        justify-content:center; 
-           align-self:center;
            gap: 15px;
  font-family: 'vgados';
       font-size:1.2rem;
+         display:inline-block;
+      justify-content:center;
+       align-items:center;
+      float: center;
+      text-align:center;
+     align-self:center;
+white-space: nowrap;
+flex-shrink: 0;
+overflow: hidden;
 }
 
 @font-face{
