--- a/warez.css
+++ b/warez.css
@@ -52,15 +52,13 @@ left:50%;
            gap: 15px;
  font-family: 'vgados';
       font-size:1.2rem;
-         display:inline-block;
+         display:flex;
       justify-content:center;
        align-items:center;
       float: center;
       text-align:center;
      align-self:center;
 white-space: nowrap;
-flex-shrink: 0;
-overflow: hidden;
 }
 
 @font-face{
