--- a/warez.css
+++ b/warez.css
@@ -38,6 +38,7 @@
            float: center;
         justify-content:center; 
            align-self:center;
+      text-align:center;
 margin-bottom:-15px;
 left:50%;
       right:50%;
