--- a/residents.css
+++ b/residents.css
@@ -5,9 +5,15 @@
         justify-content:center; 
            align-self:center;
            gap: 15px;
+ font-family: 'vgados';
+  font-size:1.2rem;
 
 
 
 
+}
 
+@font-face{
+src: url('data/font/Perfect DOS VGA 437.ttf') format("truetype");
+ font-family: 'vgados';
 }
