--- a/index.css
+++ b/index.css
@@ -148,7 +148,7 @@
    } 
       body{
       
-      background-image: url("data/images/random/1000.png");
+      background-image: url("https://msx.horse/data/bg_msx.png");
     background-size:cover;
     
       
@@ -228,6 +228,7 @@ margin-top:15px;
  
 
     
+
 
 
 
