--- a/index.css
+++ b/index.css
@@ -149,7 +149,7 @@
       body{
       
       background-image: url("https://msx.horse/data/bg_msx.png");
-
+    background-size:stretch;
     
       
     }
@@ -228,6 +228,7 @@ margin-top:15px;
  
 
     
+
 
 
 
