--- a/warez.css
+++ b/warez.css
@@ -1,8 +1,8 @@
 
       body{
       
-      background-image: url("data/images/random/1000.png");
-    background-size:cover;
+     background-image: url("https://msx.horse/data/bg_msx.png");
+    background-size:stretch;
     
       
     }
