--- a/index.css
+++ b/index.css
@@ -148,8 +148,8 @@
    } 
       body{
       
-      background-image: url("https://msx.horse/data/bg_msx.png");
-    background-size:stretch;
+      background-image: url("https://i.pinimg.com/1200x/a5/40/d7/a540d77d4eff8bb5b78372ccd9509f15.jpg");
+    background-size:cover;
     
       
     }
@@ -228,6 +228,7 @@ margin-top:15px;
  
 
     
+
 
 
 
