--- a/css.css
+++ b/css.css
@@ -1,7 +1,7 @@
 body, html {
     cursor: url('data/images/random/cursor1.gif'), pointer;
-       background-image: url("https://msx.horse/data/bg_msx.png");
-    background-size:stretch;
+       background-image: url("https://i.pinimg.com/1200x/a5/40/d7/a540d77d4eff8bb5b78372ccd9509f15.jpg");
+    background-size:cover;
 }
 
 @font-face{
