--- a/index.css
+++ b/index.css
@@ -148,7 +148,7 @@
    } 
       body{
       
-      background-image: url("https://i.pinimg.com/1200x/a5/40/d7/a540d77d4eff8bb5b78372ccd9509f15.jpg");
+      background-image: url("https://i.pinimg.com/originals/41/34/b9/4134b9af353c0f8e528cc1a0357d2cd9.gif");
     background-size:cover;
     
       
@@ -228,6 +228,7 @@ margin-top:15px;
  
 
     
+
 
 
 
