--- a/index.css
+++ b/index.css
@@ -189,7 +189,7 @@ a:active {color:#fff;}
   #divider{
     
     position:absolute;
-     display:flex;
+     display:inline-block;
       justify-content:center;
        align-items:center;
       float: center;
@@ -202,6 +202,7 @@ a:active {color:#fff;}
  
 
     
+
 
 
 
