--- a/css.css
+++ b/css.css
@@ -9,6 +9,17 @@ src: url('data/font/Perfect DOS VGA 437.ttf') format("truetype");
  font-family: 'vgados';
 }
 
+
+.sidenav a:hover {color:#fff; background-color:#282828;}
+.sidenav a:active {color:#0090e0;}
+.sidenav> hr {border-style:dotted; border-width:1px 0 0 0; margin:8px 0 8px 0;}
+a {cursor:crosshair; border: 1px solid transparent; margin: 0px;}
+a:link {color:#0090e0;}
+a:visited {color:#0090e0;}
+a:hover {color:#181818;	border: 1px solid transparent; border-image: url("data/images/random/ants.gif") 1 repeat; background-color:e6e6e6;}
+a:active {color:#fff;}
+}
+
 .cool {margin:0px; max-height:0px; overflow:hidden;}
 input:checked ~ ul.cool {max-height:100%; margin:4px 0px 4px 0px;}
 input {display:none;}
@@ -18,14 +29,6 @@ li {margin: 0; padding: 0; list-style-type: none;}
 ul {margin:6px 0px 3px 0px; padding-left: 30px;}
 ul li {margin:0px; font-size:12px;}
 
-.sidenav a:hover {color:#fff; background-color:#282828;}
-.sidenav a:active {color:#0090e0;}
-.sidenav>hr {border-style:dotted; border-width:1px 0 0 0; margin:8px 0 8px 0;}
-a {cursor:crosshair; border: 1px solid transparent; margin: 0px;}
-a:link {color:#0090e0;}
-a:visited {color:#0090e0;}
-a:hover {color:#181818;	border: 1px solid transparent; border-image: url("data/images/random/ants.gif") 1 repeat; background-color:e6e6e6;}
-a:active {color:#fff;}
 
 .sidenav {
   height: 100%; /* Full-height: remove this if you want "auto" height */
