--- a/residents.css
+++ b/residents.css
@@ -7,7 +7,7 @@
            gap: 15px;
  font-family: 'vgados';
   font-size:1.2rem;
-
+}
      
 
 .sidenav a:hover {color:#fff; background-color:#282828;}
