--- a/warez.css
+++ b/warez.css
@@ -2,7 +2,7 @@
       body{
       
      background-image: url("https://i.pinimg.com/originals/41/34/b9/4134b9af353c0f8e528cc1a0357d2cd9.gif");
-    background-size:stretch;
+    background-size:cover;
     
       
     }
