--- a/index.css
+++ b/index.css
@@ -185,7 +185,7 @@ a:active {color:#fff;}
      display:inline-block;
       justify-content:center;
        align-items:center;
-      float: center;
+      float: bottom;
       text-align:center;
      align-self:center;
     
@@ -195,6 +195,7 @@ a:active {color:#fff;}
  
 
     
+
 
 
 
