--- a/residents.css
+++ b/residents.css
@@ -42,8 +42,9 @@ src: url('data/font/Perfect DOS VGA 437.ttf') format("truetype");
     color:#888;
 }
 
-
-
+.empyshine:hover .overlay {
+  opacity: 1;
+}
 element {
 }
 .security {
