--- a/residents.css
+++ b/residents.css
@@ -31,7 +31,13 @@ src: url('data/font/Perfect DOS VGA 437.ttf') format("truetype");
     100% {background-position:-10000px 4500px;}
 }
 
+#empyshine{
+ z-index: 2; 
 
+
+
+	
+}
 
    .lowspec {
    display:none;
