--- a/residents.css
+++ b/residents.css
@@ -53,8 +53,8 @@ element {
 .security {
   mask-image: url("data/images/random/Gold Minimalist Monument Logo.png");
   -webkit-mask-image: url("data/images/random/Gold Minimalist Monument Logo.png");
-  mask-size: cover;
-  -webkit-mask-size: cover;
+  mask-size: auto;
+  -webkit-mask-size: auto;
   width: 400px;
   height: 400px;
   background: radial-gradient(circle, rgba(233,138,255,0) 25%, rgba(190,100,255,1) 30%, rgba(70,255,230,0) 32%, rgba(90,200,255,1) 34%, rgba(255,210,90,0) 37%, rgba(210,110,255,0) 43%, rgba(255,230,220,0) 56%, rgba(255,220,110,0) 62%, rgba(160,100,255,1) 64%, rgba(255,150,90,1) 66%, rgba(255,60,180,0) 68%, rgba(130,150,255,0) 73%);
@@ -65,6 +65,7 @@ element {
   pointer-events: none;
 	 position: relative; 
  z-index: 1; 
+
 }
 .imgwrap {
   cursor: zoom-out;
