--- a/residents.css
+++ b/residents.css
@@ -64,7 +64,9 @@ element {
 	mix-blend-mode: screen;
   background-size: 10000px 6000px;
   pointer-events: none;
-	 position: relative; 
+	 position: absolute;
+    left: 0;
+    top: 0;
  z-index: 1; 
 
 }
