--- a/residents.css
+++ b/residents.css
@@ -26,7 +26,10 @@ src: url('data/font/Perfect DOS VGA 437.ttf') format("truetype");
     font-size:1.2rem;
 }
 
-
+img {
+  max-width: 100%;
+  display: block;
+}
 
 @keyframes holo {
 	0% {background-position:10000px 4500px;}
