--- a/residents.css
+++ b/residents.css
@@ -31,36 +31,37 @@ img {
   display: flex;
 }
 
+
+
 @keyframes holo {
 	0% {background-position:10000px 4500px;}
     100% {background-position:-10000px 4500px;}
 }
 
-  
-
-.main i {
-    color:#888;
-}
-
 element {
 }
 .security {
-  mask-image: url("data/images/random/Gold Minimalist Monument Logo.png");
-  -webkit-mask-image: url("data/images/random/Gold Minimalist Monument Logo.png");
-  mask-size: auto;
-  -webkit-mask-size: auto;
+  mask-size: cover;
+  -webkit-mask-size: cover;
   width: 400px;
   height: 400px;
   background: radial-gradient(circle, rgba(233,138,255,0) 25%, rgba(190,100,255,1) 30%, rgba(70,255,230,0) 32%, rgba(90,200,255,1) 34%, rgba(255,210,90,0) 37%, rgba(210,110,255,0) 43%, rgba(255,230,220,0) 56%, rgba(255,220,110,0) 62%, rgba(160,100,255,1) 64%, rgba(255,150,90,1) 66%, rgba(255,60,180,0) 68%, rgba(130,150,255,0) 73%);
     background-size: auto;
   animation: holo 26.34s linear infinite;
-	mix-blend-mode: screen;
-  pointer-events: none;
-    left: 0;
-    top: 0;
- z-index: 1; 
   background-size: 10000px 6000px;
+  position: absolute;
+  z-index: 10;
+  top: 2px;
+  left: 2px;
+  mix-blend-mode: screen;
+  pointer-events: none;
 }
+
+.main i {
+    color:#888;
+}
+
+
 .imgwrap {
   cursor: zoom-out;
 }
