--- a/residents.css
+++ b/residents.css
@@ -45,7 +45,7 @@ element {
   -webkit-mask-size: cover;
   width: 400px;
   height: 400px;
-  background: radial-gradient(circle, rgba(233,138,255,0) 25%, rgba(190,100,255,1) 30%, rgba(70,255,230,0) 32%, rgba(90,200,255,1) 34%, rgba(255,210,90,0) 37%, rgba(210,110,255,0) 43%, rgba(255,230,220,0) 56%, rgba(255,220,110,0) 62%, rgba(160,100,255,1) 64%, rgba(255,150,90,1) 66%, rgba(255,60,180,0) 68%, rgba(130,150,255,0) 73%);
+  background: radial-gradient(circle, rgba(233,138,255,0) 25%, rgba(190,100,255,1) 30%, rgba(70,255,230,0) 32%, rgba(90,200,255,1) 34%, rgba(255,210,90,0) 37%, rgba(210,110,255,0) 43%, rgba(255,230,220,0) 56%, rgba(255,220,110,0) 62%, rgba(160,100,255,1) 64%, rgba(146, 243, 194) 66%, rgba(255,60,180,0) 68%, rgba(130,150,255,0) 73%);
     background-size: auto;
   animation: holo 26.34s linear infinite;
   background-size: 10000px 6000px;
