--- a/residents.css
+++ b/residents.css
@@ -27,8 +27,11 @@ src: url('data/font/Perfect DOS VGA 437.ttf') format("truetype");
 }
 
 .empyshine img {
-  max-width: 100%;
-  display: flex;
+height: 100%;
+  width: 100%;
+  object-fit: cover;
+  -webkit-mask-size: cover;
+  mask-size: cover;
 }
 
 
