Change caret color from black to #818181

--- a/css.css
+++ b/css.css
@@ -24,7 +24,7 @@ font-family: 'vgados', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sa
 /* Create the caret/arrow with a unicode, and style it */
 .caret::before {
   content: "\25B6";
-  color: black;
+  color: #818181;
   display: inline-block;
   margin-right: 6px;
 }
