--- a/css.css
+++ b/css.css
@@ -23,7 +23,7 @@ font-family: 'vgados', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sa
 
 /* Create the caret/arrow with a unicode, and style it */
 .caret::before {
-  content: "1F7A4";
+  content: "/1F7A4";
   color: #818181;
   display: inline-block;
   margin-right: 6px;
