--- a/css.css
+++ b/css.css
@@ -106,6 +106,16 @@ font-family: 'vgados', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sa
   display: block;
 }
 
+#sidenav {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 18px;
+font-family: 'vgados', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: #818181;
+  display: block;
+}
+
+
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
   color: #f1f1f1;
