--- a/css.css
+++ b/css.css
@@ -26,6 +26,7 @@ font-family: 'vgados', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sa
   content: "+";
   color: #818181;
   display: inline-block;
+margin-right: 6px;
 }
 
 /* Rotate the caret/arrow icon when clicked on (using JavaScript) */
@@ -106,7 +107,6 @@ font-family: 'vgados', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sa
 }
 
 #sidenav {
-  padding: 6px 8px 6px 16px;
   text-decoration: none;
   font-size: 18px;
 font-family: 'vgados', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
