--- a/css.css
+++ b/css.css
@@ -95,7 +95,7 @@ li {
   text-decoration: none;
   font-size: 18px;
 font-family: 'vgados', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  color: #ffffff;
+  color: #181818;
   display: block;
 }
 
@@ -103,7 +103,7 @@ font-family: 'vgados', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sa
   text-decoration: none;
   font-size: 18px;
 font-family: 'vgados', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  color: #ffffff;
+  color: #181818;
   display: block;
 }
 
