--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ a:active {color:#fff;}
    } 
       body{
       
-      background-image: url("https://i.pinimg.com/originals/41/34/b9/4134b9af353c0f8e528cc1a0357d2cd9.gif");
+      background-image: url("https://file.garden/aRY_eKC0BHrrKtoO/IMG_4289.PNG");
     background-size:cover;
     
       
@@ -63,6 +63,7 @@ a:active {color:#fff;}
  
 
     
+
 
 
 
