--- a/css.css
+++ b/css.css
@@ -50,7 +50,7 @@ margin-right: 6px;
 } 
 body, html {
     cursor: url('data/images/random/cursor1.gif'), pointer;
-       background-image: url("https://i.pinimg.com/originals/41/34/b9/4134b9af353c0f8e528cc1a0357d2cd9.gif");
+       background-image: url("https://file.garden/aRY_eKC0BHrrKtoO/IMG_4289.PNG");
     background-size:cover;
 }
 
