--- a/cssfolder/warez.css
+++ b/cssfolder/warez.css
@@ -49,12 +49,12 @@ left:50%;
 
 
   
-    .still {
+    #still {
   position:absolute;
         background:#ece9d8;
 }
 
-.wee:hover {
+#wee:hover {
   opacity:0;
 }
 
