--- a/css.css
+++ b/css.css
@@ -50,7 +50,7 @@ margin-right: 6px;
 } 
 body, html {
     cursor: url('data/images/random/cursor1.gif'), pointer;
-       background-image: url("https://file.garden/aRY_eKC0BHrrKtoO/IMG_4289.PNG");
+       background-image: url("https://i.pinimg.com/1200x/d5/6f/57/d56f57fee88e72b835eb3b5a851a14fe.jpg");
     background-size:cover;
 }
 
