--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ a:active {color:#fff;}
       body{
       
       background-image: url("https://file.garden/aRY_eKC0BHrrKtoO/IMG_4290.png");
-    background-size:cover;
+    background-size:100%;
     
       
     }
@@ -63,6 +63,7 @@ a:active {color:#fff;}
  
 
     
+
 
 
 
