--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ a:active {color:#fff;}
    } 
       body{
       
-      background-image: url("https://file.garden/aRY_eKC0BHrrKtoO/IMG_4290.png");
+      background-image: url("data/images/random/shit.png");
     background-size:100%;
     
       
@@ -63,6 +63,7 @@ a:active {color:#fff;}
  
 
     
+
 
 
 
