--- a/css.css
+++ b/css.css
@@ -50,7 +50,7 @@ margin-right: 6px;
 } 
 body, html {
     cursor: url('data/images/random/cursor1.gif'), pointer;
-       background-image: url("https://file.garden/aRY_eKC0BHrrKtoO/IMG_4290.png");
+       background-image: url("data/images/random/shit.png");
     background-size:100%;
 }
 
