--- a/css.css
+++ b/css.css
@@ -51,7 +51,7 @@ margin-right: 6px;
 body, html {
     cursor: url('data/images/random/cursor1.gif'), pointer;
        background-image: url("data/images/random/IMG_4292.png");
-    background-size: 100vw 100vh;
+    background-size: cover;
 }
 
 @font-face{
