--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ a:active {color:#fff;}
       body, html{
       
       background-image: url("data/images/random/IMG_4292.png");
-    background-size: 100vw 100vh;
+     background-size: cover;
     
       
     }
@@ -63,6 +63,7 @@ a:active {color:#fff;}
  
 
     
+
 
 
 
