--- a/css.css
+++ b/css.css
@@ -21,11 +21,11 @@ font-family: 'vgados', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sa
 }
 
 .sidenav a:hover {color:#fff; background-color:#282828;}
-.sidenav a:active {color:#005686;}
+.sidenav a:active {color:#005bff;}
 .sidenav>hr {border-style:dotted; border-width:1px 0 0 0; margin:8px 0 8px 0;}
 a {cursor:crosshair; border: 1px solid transparent; margin: 0px;}
-a:link {color:#005686;}
-a:visited {color:#005686;}
+a:link {color:#005bff;}
+a:visited {color:#005bff;}
 a:hover {color:#181818;	border: 1px solid transparent; border-image: url("data/images/random/ants.gif") 1 repeat; background-color:e6e6e6;}
 a:active {color:#fff;}
 }
@@ -60,14 +60,14 @@ src: url('data/font/Perfect DOS VGA 437.ttf') format("truetype");
 }
 
 #sidenav a:hover {color:#fff; background-color:#282828;}
-#sidenav a:active {color:#005686;}
+#sidenav a:active {color:#005bff;}
 #sidenav> hr {border-style:dotted; border-width:1px 0 0 0; margin:8px 0 8px 0;}
 .sidenav a:hover {color:#fff; background-color:#282828;}
-.sidenav a:active {color:#005686;}
+.sidenav a:active {color:#005bff;}
 .sidenav> hr {border-style:dotted; border-width:1px 0 0 0; margin:8px 0 8px 0;}
 a {cursor:crosshair; border: 1px solid transparent; margin: 0px;}
-a:link {color:#005686;}
-a:visited {color:#005686;}
+a:link {color:#005bff;}
+a:visited {color:#005bff;}
 a:hover {color:#181818;	border: 1px solid transparent; border-image: url("data/images/random/ants.gif") 1 repeat; background-color:e6e6e6;}
 a:active {color:#fff;}
 }
@@ -76,7 +76,7 @@ a:active {color:#fff;}
 input:checked ~ ul.cool {max-height:100%; margin:4px 0px 4px 0px;}
 input {display:none;}
 label {cursor:crosshair; user-select:none;}
-label:hover {color:#005686;}
+label:hover {color:#005bff;}
 li {margin: 0; padding: 0; list-style-type: none;}
 ul {margin:6px 0px 3px 0px; padding-left: 30px;}
 ul li {margin:0px; font-size:12px;}
