--- a/characters/kairo.css
+++ b/characters/kairo.css
@@ -9,3 +9,10 @@ a:hover {color:#181818;	border: 1px solid transparent; border-image: url("data/i
 a:active {color:#fff;}
 }
      
+   body, html{
+      
+      background-image: url("data/images/backgrounds/Kairobackground1.png");
+     background-size: cover;
+    
+      
+    }
