--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ a:active {color:#fff;}
      
      
    } 
-      body, html{
+      body{
       
       background-image: url("data/images/backgrounds/lycosabackground1.png");
      background-size: cover;
@@ -63,6 +63,7 @@ a:active {color:#fff;}
  
 
     
+
 
 
 
