--- a/characters/kairo.css
+++ b/characters/kairo.css
@@ -9,8 +9,8 @@ a:hover {color:#181818;	border: 1px solid transparent; border-image: url("data/i
 a:active {color:#fff;}
 }
      
-   body, html{
-      
+   body{
+       cursor: crosshair;
       background-image: url("data/images/backgrounds/Kairobackground1.png");
      background-size: cover;
     
