--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ a:active {color:#fff;}
      
      
    } 
-      #body{
+      body{
       background-image: url("data/images/backgrounds/lycosabackground1.png");
      background-size: cover;
     }
@@ -60,6 +60,7 @@ a:active {color:#fff;}
  
 
     
+
 
 
 
