--- a/characters/kairo.css
+++ b/characters/kairo.css
@@ -6,6 +6,17 @@
       
     }
 
+@font-face {
+  font-family: "bv";
+  src: url("data/font/Baskervville-Regular.ttf");
+}
+
+#box{
+  font-family: "bv";
+font-size:50px;
+ text-align:center;
+}
+
 .sidenav a:hover {color:#fff; background-color:#282828;}
 .sidenav a:active {color:#3664b6;}
 .sidenav>hr {border-style:dotted; border-width:1px 0 0 0; margin:8px 0 8px 0;}
