--- a/characters/kairo.css
+++ b/characters/kairo.css
@@ -15,7 +15,7 @@
  font-family: "bv";
  font-size:70px;
  text-align:center;
- text-color: white;
+ color: white;
 }
 
 .sidenav a:hover {color:#fff; background-color:#282828;}
