--- a/characters/kairo.css
+++ b/characters/kairo.css
@@ -16,6 +16,7 @@
  font-size:70px;
  text-align:center;
  color: white;
+   font-weight: 900;
 }
 
 .sidenav a:hover {color:#fff; background-color:#282828;}
