--- a/characters/kairo.css
+++ b/characters/kairo.css
@@ -17,6 +17,7 @@
 }
 
 #box{
+ position:relative;
  font-family: "bv";
  font-size:110px;
  text-align:center;
@@ -25,6 +26,7 @@
 }
 
 #box1{
+  position:relative;
  font-family: "bv";
  font-size:50px;
  text-align:center;
@@ -33,6 +35,7 @@
 }
 
 #box2{
+  position:relative;
  font-family: "din";
  font-size:20px;
  text-align:center;
