--- a/characters/kairo.css
+++ b/characters/kairo.css
@@ -19,6 +19,11 @@
  position:relative;
 float:center;
  align-items:center;
+  display:flex;
+        justify-content:center; 
+           align-self:center;
+           gap: 15px;
+
 }
 
 
