--- a/characters/kairo.css
+++ b/characters/kairo.css
@@ -60,7 +60,7 @@ text-align:center;
 a {cursor:crosshair; border: 1px solid transparent; margin: 0px;}
 a:link {color:#3664b6;}
 a:visited {color:#3664b6;}
-a:hover {color:#181818;	border: 1px solid transparent; border-image: url("data/images/random/ants.gif") 1 repeat; background-color:e6e6e6;}
+a:hover {color:#181818;	border: 1px solid transparent; border-image: url("/data/images/random/ants.gif") 1 repeat; background-color:e6e6e6;}
 a:active {color:#fff;}
 }
      
