--- a/characters/alone.css
+++ b/characters/alone.css
@@ -1,130 +1,17 @@
-body {
-	height: 100vh;
-	overflow: clip;
-	background: black;
-	display: grid;
-	place-items: center;
+.sidenav a:hover {color:#fff; background-color:#282828;}
+.sidenav a:active {color:#3664b6;}
+.sidenav>hr {border-style:dotted; border-width:1px 0 0 0; margin:8px 0 8px 0;}
+a {cursor:crosshair; border: 1px solid transparent; margin: 0px;}
+a:link {color:#3664b6;}
+a:visited {color:#3664b6;}
+a:hover {color:#181818;	border: 1px solid transparent; border-image: url("/data/images/random/ants.gif") 1 repeat; background-color:e6e6e6;}
+a:active {color:#fff;}
 }
-
-img {
-	position: relative;
-	display: block;
-	width: 100%;
-	animation: distort 3s infinite;
-}
-
-div {
-	box-shadow: inset 0 0 200px rgba(0, 0, 0, 0.9);
-	filter: blur(1px) hue-rotate(15deg);
-
-	&::before {
-		content: "";
-		position: absolute;
-		inset: 0;
-		width: 100%;
-		height: 100%;
-		background: linear-gradient(
-			to bottom,
-			rgba(0, 0, 0, 0) 50%,
-			rgba(0, 0, 0, 0.25) 50%
-		);
-		background-size: 100% 4px;
-		animation: scanlines 0.1s linear infinite;
-		z-index: 1000;
-	}
-
-	&::after {
-		content: "";
-		position: absolute;
-		inset: 0;
-		width: 100%;
-		height: 100%;
-		background: rgba(18, 16, 16, 0.1);
-		animation: flicker 0.15s infinite;
-	}
-}
-
-@keyframes scanlines {
-	0% {
-		background-position: 0 0;
-	}
-	100% {
-		background-position: 0 4px;
-	}
-}
-
-@keyframes flicker {
-	0% {
-		opacity: 0.27861;
-	}
-	5% {
-		opacity: 0.34769;
-	}
-	10% {
-		opacity: 0.23604;
-	}
-	15% {
-		opacity: 0.90626;
-	}
-	20% {
-		opacity: 0.18128;
-	}
-	25% {
-		opacity: 0.83891;
-	}
-	30% {
-		opacity: 0.65583;
-	}
-	35% {
-		opacity: 0.67807;
-	}
-	40% {
-		opacity: 0.26559;
-	}
-	45% {
-		opacity: 0.84693;
-	}
-	50% {
-		opacity: 0.96019;
-	}
-	55% {
-		opacity: 0.08594;
-	}
-	60% {
-		opacity: 0.20313;
-	}
-	65% {
-		opacity: 0.71988;
-	}
-	70% {
-		opacity: 0.53455;
-	}
-	75% {
-		opacity: 0.37288;
-	}
-	80% {
-		opacity: 0.71428;
-	}
-	85% {
-		opacity: 0.70419;
-	}
-	90% {
-		opacity: 0.7003;
-	}
-	95% {
-		opacity: 0.36108;
-	}
-	100% {
-		opacity: 0.24387;
-	}
-}
-
-@keyframes distort {
-	0%,
-	100% {
-		filter: brightness(1);
-	}
-	50% {
-		filter: brightness(1.02);
-	}
-}
+     
+   body{
+       cursor: crosshair;
+      background-image: url("/data/images/backgrounds/aperture wallpaper.png");
+     background-size: cover;
+    
+      
+    }
