--- a/characters/alone.css
+++ b/characters/alone.css
@@ -1,6 +1,6 @@
    body{
        cursor: crosshair;
-      background-image: url("/data/images/backgrounds/aperture wallpaper.png");
+      background-image: url("/data/images/backgrounds/aperturewallpaper.jpg");
      background-size: cover;
     
       
