--- a/characters/alone.css
+++ b/characters/alone.css
@@ -16,4 +16,15 @@ a:visited {color:#3664b6;}
 a:hover {color:#181818;	border: 1px solid transparent; border-image: url("/data/images/random/ants.gif") 1 repeat; background-color:e6e6e6;}
 a:active {color:#fff;}
 }
-     
+
+@font-face{
+font-family: "hack";
+src: url(/data/font/Hack-Regular.ttf);
+}
+
+#text1{
+font-family: "hack";
+color:#ffffff;
+text-align:center;
+font-size:50px;   
+}
