--- a/characters/alone.css
+++ b/characters/alone.css
@@ -18,12 +18,12 @@ a:active {color:#fff;}
 }
 
 @font-face{
-src: url(/data/font/Hack-Regular.ttf);
-font-family: "hack";
+ font-family: "hackr";
+  src: url("/data/font/Hack-Regular.ttf");
 }
 
 #text1{
-font-family: "hack";
+font-family: "hackr";
 color:#ffffff;
 text-align:center;
 font-size:50px;   
