--- a/characters/alone.css
+++ b/characters/alone.css
@@ -18,7 +18,7 @@ a:active {color:#fff;}
 }
 
 @font-face{
- font-family: 'hack',;
+ font-family: 'hack';
   src: url('/data/font/Hack-Regular.ttf');
 }
 
