--- a/characters/alone.css
+++ b/characters/alone.css
@@ -6,6 +6,11 @@
       
     }
 
+@font-face{
+ font-family: "hack";
+  src: url('/data/font/Hack-Regular.ttf');
+}
+
 
 .sidenav a:hover {color:#fff; background-color:#282828;}
 .sidenav a:active {color:#3664b6;}
@@ -18,7 +23,7 @@ a:active {color:#fff;}
 }
 
 
-.text1{
+#text1{
 font-family: "hack";
 color:#ffffff;
 text-align:center;
@@ -26,7 +31,3 @@ font-size:50px;
 }
 
 
-@font-face{
- font-family: "hack";
-  src: url('/data/font/Hack-Regular.ttf');
-}
