--- a/characters/alone.css
+++ b/characters/alone.css
@@ -21,7 +21,7 @@ a:active {color:#fff;}
 
 @font-face{
  font-family: "hack";
-  src: url("/data/font/Hack-Regular.ttf");
+  src: url("data/font/haxx.ttf");
 }
 
 #text1{
