--- a/characters/alone.css
+++ b/characters/alone.css
@@ -11,8 +11,9 @@ font-family: "hack";
 color:#ffffff;
 text-align:center;
 font-size:20px;
-   width:500px;
-   float:center;
+width:500px;
+float:center;
+align-self:center;
 }
 
 @font-face{
