--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -11,4 +11,19 @@ a:visited {color:#3664b6;}
 a:hover {color:#181818;	border: 1px solid transparent; border-image: url("data/images/random/ants.gif") 1 repeat; background-color:e6e6e6;}
 a:active {color:#fff;}
 
-     
+#ddr-arrowz{
+
+position: relative;
+animation: hoverhand 3s ease-in-out infinite;
+float: center;
+display: flex;
+align-items: center;
+align-self: center;
+
+}   
+
+@keyframes hoverhand {
+	0% {transform:translate(0px, 4px);}
+	50% {transform:translate(0px, -4px);}
+	100% {transform:translate(0px, 4px);}
+}
