--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -19,7 +19,15 @@ display: flex;
 align-items: center;
 align-self: center;
 justify-content: center;
- margin: auto;
+margin: auto;
+}   
+#empylogo{
+float: center;
+display: flex;
+align-items: center;
+align-self: center;
+justify-content: center;
+margin: auto;
 }   
 
 @keyframes hoverhand {
