--- a/css.css
+++ b/css.css
@@ -7,6 +7,7 @@ ul, #sidenav {
 #sidenav {
   margin: 0;
   padding: 0;
+  overflow:auto;
 }
 
 /* Style the caret/arrow */
@@ -97,6 +98,7 @@ li {
   background-color: black; /* Black */
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 20px;
+  overflow:auto;
 }
 
 /* The navigation menu links */
@@ -106,6 +108,7 @@ li {
 font-family: 'vgados', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: #181818;
   display: block;
+  overflow:auto;
 }
 
 #sidenav {
@@ -114,6 +117,7 @@ font-family: 'vgados', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sa
 font-family: 'vgados', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: #181818;
   display: block;
+  overflow:auto;
 }
 
 #titlething {
@@ -122,6 +126,7 @@ font-family: 'vgados', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sa
 font-family: 'vgados', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: #ffffff;
   display: block;
+  overflow:auto;
 }
 
 
@@ -134,6 +139,7 @@ font-family: 'vgados', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sa
 .main {
   margin-left: 160px; /* Same as the width of the sidebar */
   padding: 0px 10px;
+  overflow:auto;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
