--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -28,6 +28,8 @@ align-items: center;
 align-self: center;
 justify-content: center;
 margin: auto;
+width: 800px;
+height: 700px;
 }   
 
 @keyframes hoverhand {
