--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -32,7 +32,7 @@ justify-content: center;
 margin: auto;
 text-align: center;
 font-family: "dd";
-font-size: xx-large;
+font-size: 500px;
 color: #fff;
 }   
 
