--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -36,9 +36,29 @@ font-size: 250px;
 color: #fff;
 }   
 
+#empytext2{
+position: relative;
+float: center;
+display: flex;
+align-items: center;
+align-self: center;
+justify-content: center;
+margin: auto;
+text-align: center;
+font-family: "fp";
+font-size: 250px;
+color: #fff;
+}   
+
+
 @font-face {
   font-family: "dd";
   src: url("/data/font/DigitalDisorder.ttf");
+}
+
+@font-face {
+  font-family: "fp";
+  src: url("/data/font/full Pack 2025.ttf");
 }
 
 @keyframes hoverhand {
