--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -21,6 +21,7 @@ align-self: center;
 justify-content: center;
 margin: auto;
 position: relative;
+image-rendering: pixelated;
 }   
 #empytext{
 position: relative;
