--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -47,13 +47,15 @@ align-items: center;
 
   background-image: url("/data/images/backgrounds/polkabg.gif");
 border: 1px solid transparent; border-image: url("/data/images/random/ants.gif") 1 repeat;
-width: 700px;
-height: 100%;
+width: 900px;
+height: 100vh;
 align-items: center;
 display: flex;
 justify-content: center;
 text-align: center;
 float: center;
+align-self: center;
+position:relative;
 }
 
 
