--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -21,7 +21,7 @@ align-items: center;
 align-self: center;
 justify-content: center;
 margin: auto;
-position: relative;
+position: absolute;
 image-rendering: pixelated;
 }   
 .empytext1{
