--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -21,7 +21,7 @@ align-items: center;
 align-self: center;
 justify-content: center;
 margin: auto;
-position: absolute;
+position:relative;
 image-rendering: pixelated;
 }   
 .empytext1{
@@ -46,7 +46,7 @@ position:relative;
 
 .containempy{
 
-  background-image: url("/data/images/backgrounds/polkabg.gif");
+background-image: url("/data/images/backgrounds/polkabg.gif");
 border: 1px solid transparent; border-image: url("/data/images/random/ants.gif") 1 repeat;
 width: 900px;
 height: 100vh;
@@ -58,6 +58,7 @@ float: center;
 align-self: center;
 text-align: center;
 margin: auto;
+vertical-align: top;
 }
 
 
