--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -46,7 +46,7 @@ position:relative;
 }   
 
 .containempy{
-
+position: relative;
 background-image: url("/data/images/backgrounds/polkabg.gif");
 border: 1px solid transparent; border-image: url("/data/images/random/ants.gif") 1 repeat;
 width: 900px;
