--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -26,8 +26,18 @@ image-rendering: pixelated;
 vertical-align: bottom;
 }   
 
+@keyframes throb {
+	0%   {transform: scale(1);}
+	50%  {transform: scale(0.95);}
+	100% {transform: scale(1);}
+	}
+
+
 #modular{
-animation: hoverhand 3s ease-in-out infinite;
+animation-name: throb;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
 float: center;
 display: block;
 align-items: center;
