--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -47,8 +47,8 @@ margin: auto;
 position:relative;
 image-rendering: pixelated;
 vertical-align: bottom;
-width: 300px;
-height: auto;
+width: 100px;
+height: 60px;
 }   
 
 .empytext1{
