--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -44,7 +44,7 @@ display: block;
 align-items: left;
 align-self: left;
 justify-content: left;
-margin-left: 8px;
+padding-left: 8px;
 margin: auto;
 position:relative;
 image-rendering: pixelated;
