--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -44,8 +44,7 @@ display: block;
 align-items: left;
 align-self: left;
 justify-content: left;
-padding-left: 8px;
-margin: auto;
+margin-left: 8px;
 position:relative;
 image-rendering: pixelated;
 vertical-align: bottom;
